--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -47,6 +47,7 @@
   <script type="module">
    import CONFIG from "/scripts/config.js";
    const apiUrl = CONFIG.API_BASE_URL;
+
    // Define the handleLogout function first
    const handleLogout = async () => {
     const response = await fetch(`${apiUrl}/admin/admin-logout`, {
@@ -70,29 +71,27 @@
       backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)",
      }).showToast();
      setTimeout(() => {
-      window.location.href = "../auth/index.html";
+      window.location.href = "/auth";
      }, 3000);
     } else {
      alert(data.message);
     }
    };
 
-   // Load the header and sidebar dynamically
-   function loadHeader() {
-    fetch("components/header.html")
+   // Load the header dynamically
+   const loadHeader = () => {
+    fetch("/pages/admin/components/header.html")
      .then((res) => res.text())
      .then((data) => {
       document.getElementById("header").innerHTML = data;
-      // Execute the script if any exists in header
       executeScriptsInElement(document.getElementById("header"));
      })
-     .catch((error) => {
-      // console.error("Error loading header:", error); // Removed debug statement
-     });
-   }
+     .catch((error) => console.error("Error loading header:", error));
+   };
 
-   function loadSidebar() {
-    fetch("components/sidebar.html")
+   // Load the sidebar dynamically
+   const loadSidebar = () => {
+    fetch("/pages/admin/components/sidebar.html")
      .then((res) => res.text())
      .then((data) => {
       document.getElementById("sidebar").innerHTML = data;
@@ -112,19 +111,18 @@
       if (logoutButton) {
        logoutButton.addEventListener("click", handleLogout);
       } else {
+       console.error("Logout button not found");
       }
 
       // Load default content (dashboard)
       loadContent("dashboard.html", document.querySelector(".nav-links a"));
      })
-     .catch((error) => {
-      // console.error("Error loading sidebar:", error); // Removed debug statement
-     });
-   }
+     .catch((error) => console.error("Error loading sidebar:", error));
+   };
 
-   // Load the content dynamically and insert it into the #content div
-   function loadContent(page, link = null) {
-    const fullPath = `components/${page}`;
+   // Load the content dynamically
+   const loadContent = (page, link = null) => {
+    const fullPath = `/pages/admin/components/${page}`;
 
     fetch(fullPath)
      .then((response) => response.text())
@@ -132,7 +130,6 @@
       const contentDiv = document.getElementById("content");
       if (contentDiv) {
        contentDiv.innerHTML = data;
-       // Execute any scripts from the loaded content
        executeScriptsInElement(contentDiv);
 
        // Remove 'active' class from all links
@@ -146,33 +143,28 @@
       }
      })
      .catch((error) => {
-      // console.error("Error loading content:", error); // Removed debug statement
+      console.error("Error loading content:", error);
+      document.getElementById("content").innerHTML =
+       "<h2>Error loading the page. Please try again.</h2>";
      });
-   }
+   };
 
-   function executeScriptsInElement(element) {
+   // Execute scripts in the loaded content
+   const executeScriptsInElement = (element) => {
     const scriptTags = element.querySelectorAll("script");
-
-    // Process scripts sequentially
     scriptTags.forEach((script) => {
      const newScript = document.createElement("script");
 
-     // Copy all attributes from the original script
-     Array.from(script.attributes).forEach((attr) => {
-      newScript.setAttribute(attr.name, attr.value);
-     });
-
-     // Handle both inline and external scripts
-     if (script.src) {
-      newScript.src = script.src;
-     } else {
-      newScript.textContent = script.textContent;
+     // If the script uses ES6 imports, set type="module"
+     if (script.type === "module" || script.src.includes(".js")) {
+      newScript.type = "module";
      }
 
-     // Replace the old script with the new one
-     script.parentNode.replaceChild(newScript, script);
+     newScript.textContent = script.textContent;
+     document.body.appendChild(newScript);
+     document.body.removeChild(newScript); // Remove after execution
     });
-   }
+   };
 
    // Initialize the page with the header and sidebar
    window.onload = () => {
