--- a/pages/auth/adminLogin.html
+++ b/pages/auth/adminLogin.html
@@ -70,12 +70,12 @@
          />
         </div>
 
-        <div class="mb-3 form-check">
+        <!-- <div class="mb-3 form-check">
          <input type="checkbox" class="form-check-input" id="rememberMe" />
          <label class="form-check-label small" for="rememberMe"
           >Remember me</label
          >
-        </div>
+        </div> -->
 
         <button
          type="submit"
