feat(inspector): Add Government ID field to inspector form and profile display

--- a/pages/auth/inspectorLogin.html
+++ b/pages/auth/inspectorLogin.html
@@ -157,6 +157,7 @@
       localStorage.setItem("firstName", data.inspector.first_name);
       localStorage.setItem("lastName", data.inspector.last_name);
       localStorage.setItem("inspector_id", data.inspector.inspector_id);
+      localStorage.setItem("government_id", data.inspector.government_id);
 
       Toastify({
        text: "Login Successful! Redirecting...",
