--- a/pages/auth/forgotPassword.html
+++ b/pages/auth/forgotPassword.html
@@ -1,190 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BXU BAS: Forgot Password</title>
-  <!-- Add Bootstrap CSS -->
-  <link
-   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-   rel="stylesheet"
-   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-   crossorigin="anonymous"
-  />
-  <!-- Add Poppins font -->
-  <link
-   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-   rel="stylesheet"
-  />
-  <!-- Add Toastify CSS -->
-  <link
-   rel="stylesheet"
-   href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
-  />
-  <style>
-   body {
-    font-family: "Poppins", sans-serif;
-    height: 100vh; /* Full height */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-   }
-   .card {
-    border: 1px solid #dee2e6; /* Subtle border */
-    border-radius: 10px; /* Rounded corners */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
-    transition: transform 0.2s; /* Smooth transition */
-   }
-   .card:hover {
-    transform: translateY(-5px); /* Slight lift on hover */
-   }
-   .form-label {
-    font-weight: 500; /* Bold labels */
-   }
-   .btn-primary {
-    background-color: #007bff; /* Bootstrap primary color */
-    border: none;
-   }
-   .btn-primary:hover {
-    background-color: #0056b3; /* Darker shade on hover */
-   }
-   .text-center a {
-    color: #007bff; /* Bootstrap link color */
-   }
-   .text-center a:hover {
-    text-decoration: underline; /* Underline on hover */
-   }
-   .spinner-border {
-    display: none; /* Initially hidden */
-   }
-   img {
-    max-height: 100%;
-    max-width: 100%;
-    object-fit: contain;
-   }
-  </style>
- </head>
- <body class="vh-100">
-  <div class="container-fluid h-100">
-   <div class="row h-100">
-    <!-- Left column with background (larger) -->
-    <div
-     class="col-lg-8 d-flex align-items-center justify-content-center text-white"
-    >
-     <img src="../../assets/email.png" alt="BXU Logo" class="vh-100" />
-    </div>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>BXU BAS: Forgot Password</title>
+      <!-- Add Bootstrap CSS -->
+      <link
+         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+         rel="stylesheet"
+         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+         crossorigin="anonymous"
+      />
+      <!-- Add Poppins font -->
+      <link
+         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+         rel="stylesheet"
+      />
+      <!-- Add Toastify CSS -->
+      <link
+         rel="stylesheet"
+         href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+      />
+      <style>
+         body {
+            font-family: "Poppins", sans-serif;
+            height: 100vh;
+            margin: 0;
+            color: #0d6efd;
+         }
 
-    <!-- Right column with login form (smaller) -->
-    <div
-     class="col-lg-4 d-flex align-items-center justify-content-center bg-light"
-    >
-     <div class="card shadow-sm rounded-4" style="min-width: 400px">
-      <div class="card-body p-5">
-       <h4 class="card-title text-center mb-4">Forgot Password</h4>
-       <form id="forgotPasswordForm">
-        <div class="mb-3">
-         <label for="email" class="form-label small">Email</label>
-         <input type="email" class="form-control small" id="email" required />
-        </div>
-        <button type="submit" class="btn btn-primary w-100 mb-3">
-         <span id="buttonText">Send Reset Link</span>
-         <div
-          class="spinner-border spinner-border-sm text-light d-none"
-          id="loadingSpinner"
-          role="status"
-         >
-          <span class="visually-hidden">Loading...</span>
+         .left-panel {
+            position: relative;
+            background-image: url("/assets/bxuCityHall.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+         }
+
+         .left-panel::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(100, 100, 100, 0.6); /* grayish overlay */
+            z-index: 1;
+         }
+
+         .left-panel-content {
+            position: relative;
+            z-index: 2;
+            color: white;
+         }
+
+         .logo {
+            width: 80px;
+            height: 60px;
+         }
+      </style>
+   </head>
+   <body class="vh-100">
+      <div class="container-fluid h-100">
+         <div class="row h-100">
+            <!-- Left column with background (larger) -->
+            <div
+               class="col-lg-8 d-flex align-items-center justify-content-center left-panel"
+            >
+               <div class="left-panel-content text-center">
+                  <h1 class="display-6 fw-bold">Password Recovery</h1>
+                  <p class="h6">
+                     Enter your email address to receive a password reset link.
+                  </p>
+               </div>
+            </div>
+
+            <!-- Right column with login form (smaller) -->
+            <div
+               class="col-lg-4 d-flex align-items-center justify-content-center bg-light"
+            >
+               <div class="card shadow-sm rounded-4" style="min-width: 400px">
+                  <div class="card-body p-5">
+                     <div class="d-flex align-items-center mb-4">
+                        <img src="/assets/BXUBASLOGO.png" alt="" class="logo" />
+                        <h4 class="card-title text-center">Forgot Password</h4>
+                     </div>
+
+                     <form id="forgotPasswordForm">
+                        <div class="mb-3">
+                           <label for="email" class="form-label small"
+                              >Email</label
+                           >
+                           <input
+                              type="email"
+                              class="form-control small"
+                              id="email"
+                              required
+                           />
+                        </div>
+                        <button
+                           type="submit"
+                           class="btn btn-primary w-100 mb-3"
+                           id="loginButton"
+                        >
+                           <span id="buttonText">Send Reset Link</span>
+                           <div
+                              class="spinner-border spinner-border-sm text-light d-none"
+                              id="loadingSpinner"
+                              role="status"
+                           >
+                              <span class="visually-hidden">Loading...</span>
+                           </div>
+                        </button>
+                        <div class="text-center">
+                           <a
+                              href="index.html"
+                              class="text-decoration-none small text-secondary"
+                              >Back to Login</a
+                           >
+                        </div>
+                     </form>
+                  </div>
+               </div>
+            </div>
          </div>
-        </button>
-        <div class="text-center">
-         <a href="index.html" class="text-decoration-none small text-secondary"
-          >Back to Login</a
-         >
-        </div>
-       </form>
       </div>
-     </div>
-    </div>
-   </div>
-  </div>
 
-  <!-- Add Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Add Toastify JS -->
-  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <script type="module">
-   import CONFIG from "/scripts/config.js";
-   const apiUrl = CONFIG.API_BASE_URL;
-   const forgotPasswordForm = document.getElementById("forgotPasswordForm");
+      <!-- Add Bootstrap JS -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+      <!-- Add Toastify JS -->
+      <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+      <script type="module">
+         import CONFIG from "/scripts/config.js";
+         const apiUrl = CONFIG.API_BASE_URL;
+         const forgotPasswordForm =
+            document.getElementById("forgotPasswordForm");
 
-   // Retrieve the role from URL parameters
-   const urlParams = new URLSearchParams(window.location.search);
-   const role = urlParams.get("role"); // Get the role from the URL
+         // Retrieve the role from URL parameters
+         const urlParams = new URLSearchParams(window.location.search);
+         const role = urlParams.get("role"); // Get the role from the URL
 
-   const loadingSpinner = document.getElementById("loadingSpinner");
-   const loginButton = document.querySelector("button[type='submit']");
+         const loadingSpinner = document.getElementById("loadingSpinner");
+         const loginButton = document.querySelector("button[type='submit']");
 
-   forgotPasswordForm.addEventListener("submit", async (e) => {
-    e.preventDefault();
+         forgotPasswordForm.addEventListener("submit", async (e) => {
+            e.preventDefault();
 
-    // Disable button and show spinner
-    loginButton.disabled = true;
-    document.getElementById("buttonText").textContent = "Sending...";
-    loadingSpinner.classList.remove("d-none");
+            // Disable button and show spinner
+            loginButton.disabled = true;
+            document.getElementById("buttonText").textContent = "Sending...";
+            loadingSpinner.classList.remove("d-none");
 
-    const email = document.getElementById("email").value;
+            const email = document.getElementById("email").value;
 
-    try {
-     const response = await fetch(apiUrl + "/auth/change-password-request", {
-      method: "POST",
-      headers: {
-       Accept: "application/json",
-       "Content-Type": "application/json",
-      },
-      body: JSON.stringify({ email, role }), // Include the role in the body
-     });
+            try {
+               const response = await fetch(
+                  apiUrl + "/auth/change-password-request",
+                  {
+                     method: "POST",
+                     headers: {
+                        Accept: "application/json",
+                        "Content-Type": "application/json",
+                     },
+                     body: JSON.stringify({ email, role }), // Include the role in the body
+                  }
+               );
 
-     const data = await response.json();
+               const data = await response.json();
 
-     if (response.ok) {
-      Toastify({
-       text: "Reset link sent to your email!",
-       duration: 3000,
-       gravity: "top",
-       position: "center",
-       close: true,
-      }).showToast();
-     } else {
-      Toastify({
-       text: data.message || "Error sending reset link",
-       duration: 3000,
-       gravity: "top",
-       position: "center",
-       close: true,
-       style: {
-        background: "red",
-       },
-      }).showToast();
-     }
-    } catch (err) {
-     Toastify({
-      text: "Internal server error, please try again later",
-      duration: 3000,
-      gravity: "top",
-      position: "center",
-      close: true,
-      style: {
-       background: "red",
-      },
-     }).showToast();
-    } finally {
-     // Enable button and hide spinner
-     loginButton.disabled = false;
-     loadingSpinner.classList.add("d-none");
-     document.getElementById("buttonText").textContent = "Send Reset Link";
-    }
-   });
-  </script>
- </body>
+               if (response.ok) {
+                  Toastify({
+                     text: "Reset link sent to your email!",
+                     duration: 3000,
+                     gravity: "top",
+                     position: "center",
+                     close: true,
+                  }).showToast();
+               } else {
+                  Toastify({
+                     text: data.message || "Error sending reset link",
+                     duration: 3000,
+                     gravity: "top",
+                     position: "center",
+                     close: true,
+                     style: {
+                        background: "red",
+                     },
+                  }).showToast();
+               }
+            } catch (err) {
+               Toastify({
+                  text: "Internal server error, please try again later",
+                  duration: 3000,
+                  gravity: "top",
+                  position: "center",
+                  close: true,
+                  style: {
+                     background: "red",
+                  },
+               }).showToast();
+            } finally {
+               // Enable button and hide spinner
+               loginButton.disabled = false;
+               loadingSpinner.classList.add("d-none");
+               document.getElementById("buttonText").textContent =
+                  "Send Reset Link";
+            }
+         });
+      </script>
+   </body>
 </html>
