--- a/pages/auth/changePassword.html
+++ b/pages/auth/changePassword.html
@@ -21,14 +21,51 @@
    rel="stylesheet"
    href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
   />
+  <!-- Add Bootstrap Icons -->
+  <link
+   rel="stylesheet"
+   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+  />
   <style>
    body {
     font-family: "Poppins", sans-serif;
+    height: 100vh;
+    margin: 0;
+    color: #0d6efd;
    }
-   img {
-    max-height: 100%;
-    max-width: 100%;
-    object-fit: contain;
+
+   .left-panel {
+    position: relative;
+    background-image: url("/assets/bxuCityHall.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+   }
+
+   .left-panel::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(100, 100, 100, 0.6); /* grayish overlay */
+    z-index: 1;
+   }
+
+   .left-panel-content {
+    position: relative;
+    z-index: 2;
+    color: white;
+   }
+   
+   .logo {
+    width: 80px;
+    height: 60px;
+   }
+   
+   .eye-icon {
+    cursor: pointer;
    }
   </style>
  </head>
@@ -37,9 +74,16 @@
    <div class="row h-100">
     <!-- Left column with background (larger) -->
     <div
-     class="col-lg-8 d-flex align-items-center justify-content-center text-white"
+     class="col-lg-8 d-flex align-items-center justify-content-center left-panel"
     >
-     <img src="../../assets/unlock.jpg" alt="BXU Logo" class="vh-100" />
+     <div class="left-panel-content text-center">
+      <h1 class="display-6 fw-bold">
+       Set Your New Password
+      </h1>
+      <p class="h6">
+       Please create a strong password for your account
+      </p>
+     </div>
     </div>
 
     <!-- Right column with form (smaller) -->
@@ -48,7 +92,11 @@
     >
      <div class="card shadow-sm rounded-4" style="min-width: 400px">
       <div class="card-body p-5">
-       <h4 class="card-title text-center mb-4">Change Password</h4>
+       <div class="d-flex align-items-center mb-4">
+        <img src="/assets/BXUBASLOGO.png" alt="" class="logo me-3" />
+        <h4 class="card-title">Change Password</h4>
+       </div>
+       
        <form id="changePasswordForm">
         <div class="mb-3">
          <label for="newPassword" class="form-label small">New Password</label>
@@ -110,11 +158,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Add Toastify JS -->
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <!-- Add Bootstrap Icons -->
-  <link
-   rel="stylesheet"
-   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
-  />
   <script type="module">
    import CONFIG from "/scripts/config.js";
    const apiUrl = CONFIG.API_BASE_URL;
@@ -229,9 +272,7 @@
 
    // Toggle password visibility
    const toggleNewPassword = document.getElementById("toggleNewPassword");
-   const toggleConfirmPassword = document.getElementById(
-    "toggleConfirmPassword"
-   );
+   const toggleConfirmPassword = document.getElementById("toggleConfirmPassword");
 
    toggleNewPassword.addEventListener("click", () => {
     const newPasswordInput = document.getElementById("newPassword");
