--- a/pages/auth/index.html
+++ b/pages/auth/index.html
@@ -1,153 +1,221 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
- <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BXU BAS: Role Selection</title>
-  <link
-   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-   rel="stylesheet"
-  />
-  <link
-   href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
-   rel="stylesheet"
-  />
-  <!-- Add Poppins font -->
-  <link
-   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
-   rel="stylesheet"
-  />
-  <style>
-   body {
-    font-family: "Poppins", sans-serif;
-   }
-   .main-card {
-    background: white;
-    border-radius: 1rem;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
-    padding: 2rem;
-    max-width: 1000px;
-    width: 100%;
-    margin: auto;
-   }
-   .role-card {
-    transition: all 0.3s ease;
-    cursor: pointer;
-    border: 2px solid transparent;
-   }
-   .role-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-   }
-   .role-card.selected {
-    background-color: rgba(13, 110, 253, 0.05);
-    border-color: #0d6efd;
-   }
-   .role-card.selected .card-title,
-   .role-card.selected .card-text,
-   .role-card.selected i {
-    color: #0d6efd !important;
-   }
-   .continue-btn {
-    opacity: 0;
-    transform: translateY(20px); 
-    transition: all 0.3s ease;
-    pointer-events: none;
-   }
-   .continue-btn.show {
-    opacity: 1;
-    transform: translateY(0);
-    pointer-events: auto;
-   }
-  </style>
- </head>
- <body class="vh-100 d-flex align-items-center justify-content-center bg-light">
-  <div class="main-card">
-   <div class="container text-center">
-    <!-- Header -->
-    <div class="mb-5">
-     <!-- <img
-      src="../../assets/images/bxu-logo.png"
-      alt="BXU Logo"
-      class="img-fluid mb-3"
-      style="max-width: 150px"
-     /> -->
-     <h2 class="mb-4">BXU Business Authority Sentinel</h2>
-     <p class="text-muted">Select your role to continue</p>
-    </div>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>BXU BAS: Role Selection</title>
+      <link
+         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+         rel="stylesheet"
+      />
+      <link
+         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
+         rel="stylesheet"
+      />
+      <!-- Add Poppins font -->
+      <link
+         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+         rel="stylesheet"
+      />
+      <style>
+         body {
+            font-family: "Poppins", sans-serif;
+            background-image: linear-gradient(
+                  rgba(30, 30, 30, 0.6),
+                  rgba(30, 30, 30, 0.6)
+               ),
+               url("/assets/bxuCityHall.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            color: white;
+         }
 
-    <!-- Role Selection Cards -->
-    <div class="row justify-content-center g-4">
-     <div class="col-md-4">
-      <div
-       class="card role-card w-100 shadow-sm rounded-4"
-       data-role="admin"
-       onclick="selectRole(this, 'adminLogin.html')"
-      >
-       <div class="card-body text-center p-5">
-        <i class="bi bi-person-workspace fs-1 mb-3 text-muted"></i>
-        <h4 class="card-title">Administrator</h4>
-        <p class="card-text text-muted">System management and oversight</p>
-       </div>
+         h1,
+         p {
+            color: white;
+         }
+
+         .main-card {
+            background: white;
+            border-radius: 1rem;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+            padding: 30px;
+            max-width: 800px;
+            width: 100%;
+            margin: auto;
+            color: #0d6efd;
+         }
+
+         .role-card {
+            transition: all 0.3s ease;
+            cursor: pointer;
+            border: 2px solid transparent;
+         }
+         .role-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+         }
+         .role-card.selected {
+            background-color: rgba(13, 110, 253, 0.05);
+            border-color: #0d6efd;
+         }
+         .role-card.selected .card-title,
+         .role-card.selected .card-text,
+         .role-card.selected i {
+            color: #0d6efd !important;
+         }
+         .continue-btn {
+            transition: all 0.3s ease;
+            color: white !important;
+         }
+         .continue-btn.disabled {
+            background-color: #6c757d !important;
+            border-color: #6c757d !important;
+            opacity: 0.65;
+            cursor: not-allowed;
+            color: white !important;
+         }
+         .logo {
+            width: 150px; /* Adjust the logo size */
+            height: auto; /* Maintain aspect ratio */
+            border-radius: 15px;
+         }
+
+         .text-content {
+            text-align: left; /* Align the text to the left of the image */
+         }
+
+         @media (max-width: 768px) {
+            .text-center {
+               text-align: center;
+            }
+
+            .d-flex {
+               flex-direction: column; /* Stack the logo and text vertically on smaller screens */
+               align-items: center;
+            }
+
+            .logo {
+               margin-bottom: 10px; /* Adds space below the logo when stacked */
+            }
+
+            .text-content {
+               text-align: center; /* Center the text on small screens */
+            }
+         }
+      </style>
+   </head>
+   <body
+      class="vh-100 d-flex align-items-center justify-content-center bg-light"
+   >
+      <div class="container">
+         <!-- Header Section Outside the Card -->
+         <div
+            class="text-center mb-5 d-flex align-items-center justify-content-center"
+         >
+            <img src="/assets/BXUBASWIDTH.png" alt="Logo" class="logo me-3" />
+            <div class="text-content">
+               <h1 class="fw-bold text-white mb-3">
+                  Butuan Business Authority Sentinel
+               </h1>
+               <p class="text-light fs-5 mb-1">
+                  A system to streamline business authority operations in Butuan
+                  City
+               </p>
+            </div>
+         </div>
+
+         <!-- Role Selection Container -->
+         <div class="main-card">
+            <div class="text-center mb-3">
+               <p class="text-secondary fs-5 fw-medium">
+                  Please select a role to proceed
+               </p>
+            </div>
+            <div class="row justify-content-center g-4 mt-2">
+               <!-- Administrator Card -->
+               <div class="col-md-5 d-flex">
+                  <div
+                     class="card role-card w-100 shadow rounded-4 border-0 hover-shadow h-100 d-flex flex-column"
+                     onclick="selectRole(this, 'adminLogin.html')"
+                  >
+                     <div
+                        class="card-body text-center p-5 d-flex flex-column justify-content-center"
+                     >
+                        <i
+                           class="bi bi-person-workspace fs-1 mb-3 text-primary"
+                        ></i>
+                        <h4 class="card-title fw-semibold">Administrator</h4>
+                        <p class="card-text text-muted">
+                           Manage system users, settings, and business data.
+                        </p>
+                     </div>
+                  </div>
+               </div>
+
+               <!-- Inspector Card -->
+               <div class="col-md-5 d-flex">
+                  <div
+                     class="card role-card w-100 shadow rounded-4 border-0 hover-shadow h-100 d-flex flex-column"
+                     onclick="selectRole(this, 'inspectorLogin.html')"
+                  >
+                     <div
+                        class="card-body text-center p-5 d-flex flex-column justify-content-center"
+                     >
+                        <i
+                           class="bi bi-clipboard-check fs-1 mb-3 text-success"
+                        ></i>
+                        <h4 class="card-title fw-semibold">Inspector</h4>
+                        <p class="card-text text-muted">
+                           Conduct field inspections and submit reports.
+                        </p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+
+            <!-- Continue Button -->
+            <div class="mt-4 text-center">
+               <button
+                  id="continueBtn"
+                  class="btn btn-lg continue-btn disabled"
+                  disabled
+                  onclick="proceedToLogin()"
+               >
+                  Continue <i class="bi bi-arrow-right"></i>
+               </button>
+            </div>
+         </div>
       </div>
-     </div>
+   </body>
 
-     <div class="col-md-4">
-      <div
-       class="card role-card w-100 shadow-sm rounded-4"
-       data-role="inspector"
-       onclick="selectRole(this, 'inspectorLogin.html')"
-      >
-       <div class="card-body text-center p-5">
-        <i class="bi bi-clipboard-check fs-1 mb-3 text-muted"></i>
-        <h4 class="card-title">Inspector</h4>
-        <p class="card-text text-muted">Field operations and reporting</p>
-       </div>
-      </div>
-     </div>
-    </div>
+   <script>
+      let selectedRole = null;
 
-    <!-- Continue Button -->
-    <div class="mt-4">
-     <button
-      id="continueBtn"
-      class="btn btn-primary btn-lg continue-btn"
-      onclick="proceedToLogin()"
-     >
-      Continue <i class="bi bi-arrow-right"></i>
-     </button>
-    </div>
-   </div>
-  </div>
+      function selectRole(card, redirectUrl) {
+         // Remove selected class from all cards
+         document.querySelectorAll(".role-card").forEach((card) => {
+            card.classList.remove("selected");
+         });
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-   let selectedRole = null;
-   let selectedPath = null;
+         // Add selected class to clicked card
+         card.classList.add("selected");
 
-   function selectRole(element, path) {
-    // Remove selected class from all cards
-    document.querySelectorAll(".role-card").forEach((card) => {
-     card.classList.remove("selected");
-    });
+         // Store the redirect URL
+         selectedRole = redirectUrl;
 
-    // Add selected class to clicked card
-    element.classList.add("selected");
+         // Enable the continue button
+         const continueBtn = document.getElementById("continueBtn");
+         continueBtn.classList.remove("disabled");
+         continueBtn.classList.add("btn-primary");
+         continueBtn.disabled = false;
+      }
 
-    // Show continue button
-    const continueBtn = document.getElementById("continueBtn");
-    continueBtn.classList.add("show");
-
-    // Store selected role and path
-    selectedRole = element.dataset.role;
-    selectedPath = path;
-   }
-
-   function proceedToLogin() {
-    if (selectedPath) {
-     window.location.href = selectedPath;
-    }
-   }
-  </script>
- </body>
+      function proceedToLogin() {
+         if (selectedRole) {
+            window.location.href = selectedRole;
+         }
+      }
+   </script>
 </html>
